--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,27 +1,39 @@
 <% include ../partials/header %>
 
-<!-- <h1>Movies Database!!!</h1> -->
+<div class="flex results">
+  <div class="text-center">
+    <h1>Movies Database!!!</h1>
+    <form action="/">
+      <input type="submit" class="btn btn-sm btn-primary" value="Search again" />
+    </form>
+  </div>
 
-<ul>
-
-<% data["Search"].forEach(function(movie) { %>
-    <li>
-        <strong>
-            <a href="http://www.omdbapi.com/?i=<%=movie["imdbID"]%>&plot=full&apikey=thewdb">
-                <%= movie["Title"] %>
-            </a>
-        </strong>
-            - <%=movie["Year"]%>
-		<div class="right">
-		<a href= "http://www.omdbapi.com/?i=<%=movie["imdbID"]%>&plot=full&apikey=thewdb"><img class="movieImg" src="http://img.omdbapi.com/?i=<%=movie["imdbID"]%>&plot=full&apikey=thewdb"></a>
-		</div>
-		<br>
-        </li>
-<% }) %>
-</ul>
-
-<form action="/">
-    <input type="submit" class="btn btn-sm btn-primary" value="Search again" />
-</form>
+  <div class="grid-container">
+    <% if (data["Search"]) { %>
+      <% data["Search"].forEach(function(movie) { -%>
+      <div class="grid-item">
+        <a href="http://img.omdbapi.com/?i=<%=movie["imdbID"]%>&apikey=thewdb" target="_blank">
+          <strong><%= movie["Title"] %></strong>
+        </a>
+        - <%=movie["Year"]%> <%= movie["Plot"] %>
+        <div class="right">
+          <!-- <a href="http://img.omdbapi.com/?i=<%=movie["imdbID"]%>&apikey=thewdb" target="_blank"> -->
+            <a href="<%=movie["Poster"]%>" target="_blank">
+            <!-- <img class="movieImg" src="http://img.omdbapi.com/?i=<%=movie["imdbID"]%>&plot=full&apikey=thewdb"> -->
+            <img class="movieImg" src="<%=movie["Poster"]%>">
+          </a>
+          <!-- <a href="http://www.omdbapi.com/?i=<%=movie["imdbID"]%>&plot=short&apikey=thewdb">
+            <img class="movieImg" src="http://img.omdbapi.com/?i=<%=movie["imdbID"]%>&plot=short&apikey=thewdb">
+          </a>           -->
+        </div>
+        <p></p>
+        <br>
+      </div>
+      <% }) %>
+    <% } else { %>
+      <p>No movies found.</p>
+    <% } %>
+  </div>
+</div>
 
 <% include ../partials/footer %>
