--- a/partials/header.ejs
+++ b/partials/header.ejs
@@ -4,9 +4,10 @@
 		<!-- Make site responsive on mobile/tablet -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">	
 		<title>Movie DB Search</title>
-		<link rel="stylesheet" href="https://bootswatch.com/5/sketchy/bootstrap.min.css">
+		<link rel="stylesheet" href="https://bootswatch.com/4/sketchy/bootstrap.min.css">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
 		<link rel="stylesheet" href="./stylesheets/main.css">
+		<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 	</head>
 	<body>
 
