--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,59 +1,76 @@
 .main-header {
-  z-index: 1;
-  position: relative;
-  /* text-align: center; */
-  padding-top: 30vh;
-  width: 100%
-}
+	z-index: 1;
+	position: relative;
+	/* text-align: center; */
+	padding-top: 30vh;
+	width: 100%
+  }
+  
+  #movieTitle,
+  #movieYear {
+	  padding-left: 13px;
+  }
+  
+  .title,
+  .year {
+	  margin-bottom: 5px
+  }
+  
+  .movieImg {
+	  margin: 2vh
+  }
+  
+  .searchPage {
+	  width: 15em;
+	  margin: 25px auto;
+  }
+  
+  .grid-container {
+	  display: flex;
+	  flex-wrap: wrap;
+	  justify-content: center;
+  }
+  
+  .grid-item {
+	  margin: 10px;
+	  padding: 10px;
+	  border: 1px solid #ccc;
+	  flex: 0 0 300px;
+  }
+  
+  .results {
+	  margin-top: 2rem;
+  }
 
-#movieTitle,
-#movieYear {
-	padding-left: 13px;
-}
-
-.title,
-.year {
-	margin-bottom: 5px
-}
-
-.movieImg {
-	margin: 2vh
-}
-
-.searchPage {
-	width: 15em;
-	margin: 25px auto;
-}
-
-.grid-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.grid-item {
-    margin: 10px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    flex: 0 0 300px;
-}
-
-.results {
-	margin-top: 2rem;
-}
-
-/* iPhone */
-@media only screen 
-  and (min-device-width: 320px) 
-  and (max-device-width: 480px)
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (orientation: portrait) {
-	.movieImg {
-		width: 12vh;
-		margin: 1vh
-	}
-	.searchPage {
-		width: 12em;
-		margin: 25px auto;
-	}
-}
+  .search-header {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding-top: 20px;
+  }
+  
+  .inline-title {
+	display: inline-block;
+	margin-right: 10px;
+  }
+  
+  .inline-search {
+	display: inline-block;
+	margin: 15px 10px;
+  }
+  
+  /* iPhone */
+  @media only screen 
+	and (min-device-width: 320px) 
+	and (max-device-width: 480px)
+	and (-webkit-min-device-pixel-ratio: 2)
+	and (orientation: portrait) {
+	  .movieImg {
+		  width: 12vh;
+		  margin: 1vh
+	  }
+	  .searchPage {
+		  width: 12em;
+		  margin: 25px auto;
+	  }
+  }
