--- a/views/search.ejs
+++ b/views/search.ejs
@@ -10,11 +10,14 @@
 					<input class="form-control title" type="text" aria-describedby="movieTitle" placeholder="Title" name="search">
 					<small id="movieTitle" class="form-text text-muted">Search by title</small>
 				</div>
-
-				<div class="form-group">
-					<input class="form-control year" type="text" aria-describedby="movieTitle" placeholder="Year" name="search">
-					<small id="movieYear" class="form-text text-muted">Search by year</small>
-				</div>
+				<!-- <div class="form-group">
+					<input class="form-control actors" type="text" placeholder="Actors" name="actors">
+					<small class="form-text text-muted">Search by actors</small>
+				  </div> -->
+				  <div class="form-group">
+					<input class="form-control year" type="text" placeholder="Year" name="year">
+					<small class="form-text text-muted">Search by year</small>
+				  </div>
 
 				<div class="form-group">
 					<button class="btn btn-lg btn-primary btn-block">Submit</button>
